--- a/DataAnalysisEnvironment.yml
+++ b/DataAnalysisEnvironment.yml
@@ -22,12 +22,13 @@ dependencies:
   - bleach=4.1.0=pyhd8ed1ab_0
   - brotlipy=0.7.0=py37h5e8e339_1003
   - bzip2=1.0.8=h7f98852_4
-  - ca-certificates=2021.10.26=h06a4308_2
+  - ca-certificates=2021.10.8=ha878542_0
   - certifi=2021.10.8=py37h89c1867_1
   - cffi=1.14.4=py37h11fe52a_0
   - chardet=4.0.0=py37h89c1867_2
   - cryptography=2.5=py37hb7f436b_1
   - cycler=0.11.0=pyhd8ed1ab_0
+  - cython=0.29.24=py37hcd2ae1e_1
   - dbus=1.13.18=hb2f20db_0
   - debugpy=1.5.1=py37hcd2ae1e_0
   - decorator=5.1.0=pyhd8ed1ab_0
@@ -84,6 +85,7 @@ dependencies:
   - libxcb=1.14=h7b6447c_0
   - libxml2=2.9.12=h03d6c58_0
   - libzlib=1.2.11=h36c2ea0_1013
+  - linearmodels=4.24=py37hb1e94ed_3
   - littleutils=0.2.2=py_0
   - lz4-c=1.9.3=h9c3ff4c_1
   - markupsafe=2.0.1=py37h5e8e339_1
@@ -92,6 +94,7 @@ dependencies:
   - matplotlib-inline=0.1.3=pyhd8ed1ab_0
   - mistune=0.8.4=py37h5e8e339_1005
   - mpmath=1.2.1=pyhd8ed1ab_0
+  - mypy_extensions=0.4.3=py37h89c1867_4
   - nbclient=0.5.9=pyhd8ed1ab_0
   - nbconvert=6.3.0=py37h89c1867_1
   - nbformat=5.1.3=pyhd8ed1ab_0
@@ -117,9 +120,12 @@ dependencies:
   - pip=21.3.1=pyhd8ed1ab_0
   - prometheus_client=0.12.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.22=pyha770c72_0
+  - property-cached=1.6.4=py_0
+  - property_cached=1.6.4=0
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pycparser=2.21=pyhd8ed1ab_0
   - pygments=2.10.0=pyhd8ed1ab_0
+  - pyhdfe=0.1.0=pyhd8ed1ab_0
   - pyopenssl=19.0.0=py37_0
   - pyparsing=3.0.5=pyhd8ed1ab_0
   - pyqt=5.9.2=py37h05f1152_2
